--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -46,6 +46,10 @@
             </div>
         </nav>
         <div class="container">
+            <?= $this->navigation('navigation')
+            ->breadcrumbs()
+            ->setMinDepth(0)
+            ->setPartial('partial/breadcrumb') ?>
             <?= $this->content ?>
             <hr>
             <footer>
